--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp-data": "^1.2.0",
     "gulp-eslint": "^2.0.0",
     "gulp-extension-change": "0.0.3",
+    "gulp-filter": "^4.0.0",
     "gulp-htmlhint": "^0.3.0",
     "gulp-iconv": "0.0.1",
     "gulp-if": "^1.2.5",
