--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "gulp-jade": "^1.1.0",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^0.6.6",
+    "gulp-pug": "^3.0.3",
     "gulp-sort": "^2.0.0",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-stylus": "^1.3.2",
@@ -67,6 +68,7 @@
     "nib": "^1.0.4",
     "path": "^0.4.9",
     "phantomjs": "^1.9.18",
+    "pug": "^2.0.0-beta2",
     "recursive-readdir": "^1.3.0",
     "run-sequence": "^1.1.4",
     "s": "^0.1.1",
