--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "gulp-css-url": "0.0.10",
     "gulp-data": "^1.2.0",
     "gulp-eslint": "^2.0.0",
-    "gulp-extension-change": "0.0.3",
     "gulp-filter": "^4.0.0",
     "gulp-htmlhint": "^0.3.0",
     "gulp-iconv": "0.0.1",
@@ -47,6 +46,7 @@
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^0.6.6",
     "gulp-pug": "^3.0.3",
+    "gulp-rename": "^1.2.2",
     "gulp-sort": "^2.0.0",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-stylus": "^1.3.2",
