--- a/_esdoc/package.json
+++ b/_esdoc/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "esdoc": "esdoc -c esdoc.json"
   },
   "repository": {
     "Type": "git",
@@ -27,6 +28,8 @@
     "babel-preset-stage-0": "^6.5.0",
     "browser-sync": "^2.12.1",
     "del": "^2.2.0",
+    "esdoc": "^0.4.8",
+    "esdoc-es7-plugin": "0.0.3",
     "eslint": "^2.7.0",
     "gulp": "^3.9.1",
     "gulp-bower": "0.0.13",
@@ -37,7 +40,7 @@
     "gulp-css-cache-bust": "0.0.7",
     "gulp-css-url": "0.0.10",
     "gulp-data": "^1.2.0",
-    "gulp-eslint": "^2.0.0",
+    "gulp-eslint": "^3.0.1",
     "gulp-filter": "^4.0.0",
     "gulp-htmlhint": "^0.3.0",
     "gulp-iconv": "0.0.1",
