--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "esdoc": "esdoc -c esdoc.json"
+    "esdoc": "esdoc -c esdoc.json",
+    "test": "karma start"
   },
   "repository": {
     "Type": "git",
@@ -22,6 +22,7 @@
   "devDependencies": {
     "babel-eslint": "^6.0.2",
     "babel-loader": "^6.2.0",
+    "babel-plugin-espower": "^2.3.1",
     "babel-plugin-transform-object-assign": "^6.8.0",
     "babel-plugin-transform-runtime": "^6.12.0",
     "babel-preset-es2015": "^6.6.0",
@@ -58,19 +59,23 @@
     "gulp-watch": "4.0.0",
     "imagemin-pngquant": "^4.0.0",
     "jasmine-core": "^2.3.4",
+    "json-loader": "^0.5.4",
     "karma": "^0.13.9",
     "karma-chrome-launcher": "^0.2.0",
+    "karma-cli": "^1.0.1",
     "karma-coffee-preprocessor": "^0.3.0",
     "karma-html2js-preprocessor": "^0.1.0",
     "karma-jasmine": "^0.3.6",
     "karma-jasmine-html-reporter": "^0.1.8",
     "karma-phantomjs-launcher": "^0.2.1",
     "karma-spec-reporter": "0.0.20",
+    "karma-webpack": "^1.8.0",
     "lodash": "^4.11.0",
     "minimist": "^1.2.0",
     "nib": "^1.0.4",
     "path": "^0.4.9",
     "phantomjs": "^1.9.18",
+    "power-assert": "^1.4.1",
     "pug": "^2.0.0-beta2",
     "recursive-readdir": "^1.3.0",
     "run-sequence": "^1.1.4",
