--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "babel-plugin-espower": "^2.3.1",
     "babel-plugin-transform-object-assign": "^6.8.0",
     "babel-plugin-transform-runtime": "^6.12.0",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2015": "^6.14.0",
     "babel-preset-stage-0": "^6.5.0",
     "browser-sync": "^2.12.1",
     "del": "^2.2.0",
@@ -82,7 +82,7 @@
     "through2": "^0.6.3",
     "ts-loader": "^0.8.2",
     "typescript": "^1.8.10",
-    "webpack": "^1.4.13"
+    "webpack": "^2.1.0-beta.21"
   },
   "dependencies": {}
 }
