--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-plugin-transform-runtime": "^6.12.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.16.3",
     "browser-sync": "^2.12.1",
     "del": "^2.2.0",
     "esdoc": "^0.4.8",
