--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "through2": "^0.6.3",
     "ts-loader": "^0.8.2",
     "typescript": "^1.8.10",
-    "webpack": "^2.1.0-beta.26"
+    "webpack": "^2.2.0-rc.2"
   },
   "dependencies": {}
 }
