--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-eslint": "^6.0.2",
     "babel-loader": "^6.2.0",
     "babel-plugin-espower": "^2.3.1",
+    "babel-polyfill": "^6.22.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-es2017": "^6.16.0",
     "babel-preset-stage-0": "^6.5.0",
@@ -69,7 +70,6 @@
     "karma-phantomjs-launcher": "^0.2.1",
     "karma-spec-reporter": "0.0.20",
     "karma-webpack": "^1.8.0",
-    "lodash": "^4.11.0",
     "minimist": "^1.2.0",
     "nib": "^1.0.4",
     "path": "^0.12.7",
