--- a/package.json
+++ b/package.json
@@ -37,16 +37,15 @@
     "gulp-bower": "0.0.13",
     "gulp-cached": "^1.1.0",
     "gulp-changed": "^1.3.0",
-    "gulp-connect-php": "0.0.7",
-    "gulp-cr-lf-replace": "0.0.2",
+    "gulp-connect-php": "^0.0.8",
     "gulp-css-cache-bust": "0.0.7",
     "gulp-css-url": "0.0.10",
     "gulp-data": "^1.2.0",
     "gulp-eslint": "^3.0.1",
     "gulp-filter": "^4.0.0",
-    "gulp-htmlhint": "^0.3.0",
+    "gulp-htmlhint": "^0.3.1",
     "gulp-iconv": "0.0.1",
-    "gulp-if": "^1.2.5",
+    "gulp-if": "^2.0.2",
     "gulp-imagemin": "^2.4.0",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^0.6.6",
@@ -73,12 +72,12 @@
     "minimist": "^1.2.0",
     "nib": "^1.0.4",
     "path": "^0.12.7",
-    "phantomjs": "^1.9.18",
+    "phantomjs": "^2.1.7",
     "power-assert": "^1.4.1",
     "pug": "^2.0.0-beta2",
-    "recursive-readdir": "^1.3.0",
+    "recursive-readdir": "^2.1.0",
     "run-sequence": "^1.1.4",
-    "stylus": "^0.48.1",
+    "stylus": "^0.54.5",
     "through2": "^0.6.3",
     "typescript": "^1.8.10",
     "webpack": "^2.2.0-rc.2"
