--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.18.0",
     "browser-sync": "^2.12.1",
+    "clone": "^2.1.1",
     "del": "^2.2.0",
     "esdoc": "^0.4.8",
     "esdoc-es7-plugin": "0.0.3",
